--- a/ourstory.html
+++ b/ourstory.html
@@ -30,43 +30,30 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="./logos/logo.png" alt="logo" class="nav-logo">
+        <a href="https://www.google.com/maps/place/Rosslyn+Riviera+Mall/@-1.2159707,36.7956993,17z/data=!4m10!1m2!2m1!1srosslyn+riviera!3m6!1s0x182f3d5eef234b95:0xac9e573f43fe5923!8m2!3d-1.216572!4d36.7998675!15sCg9yb3NzbHluIHJpdmllcmFaESIPcm9zc2x5biByaXZpZXJhkgEPc2hvcHBpbmdfY2VudGVy4AEA!16s%2Fg%2F11c2l3xmq6?entry=ttu" style="text-decoration: none; color: white; font-family: Resamitz;"><img src="logos/location.png" alt="location" style="height: 1em;"> Roslyn Riviera mall</a>
+        <img src="logos/logo.png" alt="logo" class="nav-logo">
         <div class="navdropdown-container">
-            <img src="./logos/burger-bar.png" alt="burgerbar" class="burgerbar" id="burgerbar" onclick="toggleDropdown()">
+            <img src="logos/burger-bar.png" alt="burgerbar" class="burgerbar" id="burgerbar" onclick="toggleDropdown()">
             <div class="navdropdown hidden" id="navdropdown">
-                <a href="./index.html" class="nav-link">HOME</a>
-                <a href="./ourstory.html" class="nav-link">OUR STORY</a>
-                <a href="./locations.html" class="nav-link">HOURS & LOCATIONS</a>
-                <a href="./reservations.html" class="nav-link">RESERVATIONS</a>
-                <a href="./store.html" class="nav-link">STORE</a>
-                <a href="./giftcards.html" class="nav-link">GIFT CARDS</a>
+                <a href="/index.html" class="nav-link">HOME</a>
+                <a href="/drinks.html" class="nav-link">DRINKS</a>
+                <a href="/ourstory.html" class="nav-link">OUR STORY</a>
+                <a href="/reservations.html" class="nav-link">RESERVATIONS</a>
+                <a href="/store.html" class="nav-link">MERCHANDISE</a>
+                <!-- <a href="" class="nav-link">GIFT CARDS</a> -->
             </div>
-        </div>
-    </div>
-    <div class="bottom-nav">
-        <div>
-            <img src="./logos/facebook-app-symbol.png" alt="facebook" style="height: 1.2em; margin-left: 1em;">
-            <img src="./logos/instagram.png" alt="instagram" style="height: 1.2em; margin-left: 1em;">
-            <img src="./logos/spotify.png" alt="spotify" style="height: 1.2em; margin-left: 1em;">
-        </div>
-        <div style="display: flex; align-items: center;">
-            <a href="./workwithus.html" class="nav-link">WORK WITH US</a>
-            <a href="#" class="nav-link">POP-UPS</a>
-            <a href="#" class="nav-link">PRESS</a>
-            <a href="#" class="nav-link">CONTACTS</a>
-            <a href="#" class="nav-link">EVENTS</a>
         </div>
     </div>
     <div class="carousel slide" id="ourstoryCarousel" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="carousel-image" style="background-image: url('./images/ourstory/carousel1.avif');"></div>
+                <div class="carousel-image" style="background-image: url('./images/ourstory/journey1.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('./images/ourstory/carousel2.avif');"></div>
+                <div class="carousel-image" style="background-image: url('./images/ourstory/journey6.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('./images/ourstory/carousel3.avif');"></div>
+                <div class="carousel-image" style="background-image: url('./images/ourstory/journey7.jpg');"></div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#ourstoryCarousel" data-bs-slide="prev">
@@ -83,7 +70,7 @@
         <p style="text-align: center; font-family: 'Resamitz';">"Dante, one of Greenwich Village’s most beloved stomping grounds, has undergone a transformation 104 years in the making. Its latest incarnation: the world’s best bar."</p>
         <p style="margin-top: 1em; font-family: 'Resamitz'; text-align: center;">Time Out,  4th October  2019</p>
     </div>
-    <div style="display: flex;" class="scrollhide">
+    <!-- <div style="display: flex;" class="scrollhide">
         <div class="doubleborder" style="width: 40%; margin: 2em;">
             <p style="font-family: 'Resamitz'; text-align: center;">
                 Dante has been a beacon for the community of Greenwich Village since it opened its doors in 1915. 
@@ -94,8 +81,8 @@
             </p>
         </div>
         <div class="story-image" style="background-image: url('./images/ourstory/carousel1.avif'); box-shadow: 15px 0px 15px black inset;"></div>
-    </div>
-    <div style="width: 70%; margin: auto; margin-top: 4em;">
+    </div> -->
+    <!-- <div style="width: 70%; margin: auto; margin-top: 4em;">
         <p style="font-family: 'Resamitz'; text-align: center; margin-bottom: 2em;">
             Now in its latest incarnation as Dante, its new owners, all lifelong industry professionals, and old friends, 
             have breathed new life into this iconic space. Its historical integrity and sense of community remain firmly 
@@ -117,8 +104,8 @@
             Australian family. The family has stayed true to the Italian heritage of Caffe Dante whilst taking influences 
             from the global ingredients that New Yorkers have learned to love and seek out.
         </p>
-    </div>
-    <div style="display: flex; margin-bottom: 4em;" class="scrollhide">
+    </div> -->
+    <!-- <div style="display: flex; margin-bottom: 4em;" class="scrollhide">
         <div class="story-image" style="background-image: url('./images/ourstory/carousel2.avif'); box-shadow: -15px 0px 15px black inset;"></div>
         <div class="doubleborder" style="width: 40%; margin: 2em;">
             <p style="font-family: 'Resamitz'; text-align: center;">
@@ -129,23 +116,17 @@
                 a warm smile or a friendly embrace epitomized life’s simple pleasures.
             </p>
         </div>
-    </div>
+    </div> -->
     <div class="ourstory-gallery-div">
         <div class="ourstory-gallery">
-            <img src="./images/ourstory/ourstory1.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory3.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory5.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory7.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory9.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory11.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
+            <img src="./images/ourstory/journey1.jpg" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
+            <img src="./images/ourstory/journey2.jpg" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
+            <img src="./images/ourstory/journey3.jpg" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
         </div>
         <div class="ourstory-gallery">
-            <img src="./images/ourstory/ourstory2.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory4.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory6.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory8.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory10.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
-            <img src="./images/ourstory/ourstory12.avif" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
+            <img src="./images/ourstory/journey4.jpg" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
+            <img src="./images/ourstory/journey5.jpg" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
+            <img src="./images/ourstory/journey6.jpg" alt="" style="width: 100%; margin-bottom: 1em;" class="scrollhide">
         </div>
     </div>
 </body>
