--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 
     <style>
@@ -25,16 +25,16 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="https://www.google.com/maps/place/Rosslyn+Riviera+Mall/@-1.2159707,36.7956993,17z/data=!4m10!1m2!2m1!1srosslyn+riviera!3m6!1s0x182f3d5eef234b95:0xac9e573f43fe5923!8m2!3d-1.216572!4d36.7998675!15sCg9yb3NzbHluIHJpdmllcmFaESIPcm9zc2x5biByaXZpZXJhkgEPc2hvcHBpbmdfY2VudGVy4AEA!16s%2Fg%2F11c2l3xmq6?entry=ttu" style="text-decoration: none; color: white; font-family: Resamitz;"><img src="logos/location.png" alt="location" style="height: 1em;"> Roslyn Riviera mall</a>
-        <img src="logos/logo.png" alt="logo" class="nav-logo">
+        <a href="https://www.google.com/maps/place/Rosslyn+Riviera+Mall/@-1.2159707,36.7956993,17z/data=!4m10!1m2!2m1!1srosslyn+riviera!3m6!1s0x182f3d5eef234b95:0xac9e573f43fe5923!8m2!3d-1.216572!4d36.7998675!15sCg9yb3NzbHluIHJpdmllcmFaESIPcm9zc2x5biByaXZpZXJhkgEPc2hvcHBpbmdfY2VudGVy4AEA!16s%2Fg%2F11c2l3xmq6?entry=ttu" style="text-decoration: none; color: white; font-family: Resamitz;"><img src="./logos/location.png" alt="location" style="height: 1em;"> Roslyn Riviera mall</a>
+        <img src="./logos/logo.png" alt="logo" class="nav-logo">
         <div class="navdropdown-container">
-            <img src="logos/burger-bar.png" alt="burgerbar" class="burgerbar" id="burgerbar" onclick="toggleDropdown()">
+            <img src="./logos/burger-bar.png" alt="burgerbar" class="burgerbar" id="burgerbar" onclick="toggleDropdown()">
             <div class="navdropdown hidden" id="navdropdown">
-                <a href="/index.html" class="nav-link">HOME</a>
-                <a href="/drinks.html" class="nav-link">DRINKS</a>
-                <a href="/ourstory.html" class="nav-link">OUR STORY</a>
-                <a href="/reservations.html" class="nav-link">RESERVATIONS</a>
-                <a href="/store.html" class="nav-link">MERCHANDISE</a>
+                <a href="./index.html" class="nav-link">HOME</a>
+                <a href="./drinks.html" class="nav-link">DRINKS</a>
+                <a href="./ourstory.html" class="nav-link">OUR STORY</a>
+                <a href="./reservations.html" class="nav-link">RESERVATIONS</a>
+                <a href="./store.html" class="nav-link">MERCHANDISE</a>
                 <!-- <a href="" class="nav-link">GIFT CARDS</a> -->
             </div>
         </div>
@@ -43,52 +43,52 @@
     <div class="carousel slide" id="indexCarousel" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="carousel-image" style="background-image: url('images/index/food1.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food1.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food2.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food2.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food3.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food3.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
+                <div class="carousel-image" style="background-image: url('./logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food4.png');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food4.png');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food5.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food5.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food6.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food6.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
+                <div class="carousel-image" style="background-image: url('./logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food7.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food7.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food8.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food8.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food9.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food9.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
+                <div class="carousel-image" style="background-image: url('./logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food10.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food10.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food11.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food11.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('images/index/food12.jpg');"></div>
+                <div class="carousel-image" style="background-image: url('./images/index/food12.jpg');"></div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-image" style="background-image: url('logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
+                <div class="carousel-image" style="background-image: url('./logos/logo.png'); background-size: contain; background-repeat: no-repeat;"></div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#indexCarousel" data-bs-slide="prev">
@@ -194,7 +194,7 @@
         </a>
     </div>
     <div class="menu-options-div">
-        <a href="/drinks.html" class="menu-options-link">
+        <a href="./drinks.html" class="menu-options-link">
             <div class="menu-options" style="background-image: url('./images/index/cocktail1.avif');">
                 <div style="display: flex; flex-direction: column; align-items: center;">
                     <p class="menu-options-title">BEVERAGES</p>
